feat: TilesFactory completed with a more modular mechanic